<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.EmailVerifyFragment">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.lysnclient.viewmodel.UserAuthenticateViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/email_verfiy_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/authScreenBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <ImageView
            android:id="@+id/img_close_verify_screen"
            style="@style/actionIcon"
            android:layout_marginBottom="@dimen/dp24"
            android:contentDescription="@string/close_icon"
            android:onClick="@{()->viewModel.navigateBack()}"
            android:src="@drawable/icon_close"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/textViewHeading"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginBottom="@dimen/dp8"
            android:text="@string/what_is_your_email_address" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/subHeading"
            android:lineSpacingExtra="@dimen/sp5"
            android:text="@string/email_require_info" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/roundCornerEditText"
            android:layout_marginTop="@dimen/dp16"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:errorMsg="@{viewModel.emailErrorMsg.trim()}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={viewModel.emailField}"
                android:textSize="@dimen/sp17" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify_email"
            style="@style/submitButton"
            android:backgroundColor="@{TextUtils.isEmpty(viewModel.emailField)?@color/submitButtonDisableColor :@color/submitButtonEnableColor}"
            android:clickable="@{TextUtils.isEmpty(viewModel.emailField)? false :true}"
            android:enabled="@{TextUtils.isEmpty(viewModel.emailField)? false :true}"
            android:onClick="@{()->viewModel.onBtnEmailVerifyClickListener()}"
            android:text="@string/continues"
            android:textColor="@{TextUtils.isEmpty(viewModel.emailField)?@color/submitButtonDisableTextColor :@color/submitButtonEnableTextColor}"
            app:layoutMarginTop="@{TextUtils.isEmpty(viewModel.emailErrorMsg)? @dimen/dp0 : @dimen/dp16}" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp12"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/sp5"
            android:paddingStart="@dimen/dp16"
            android:paddingEnd="@dimen/dp16"
            android:text="@string/agree_for_privacy_policy_msg"
            android:textColor="@color/darkFontColor"
            android:textSize="@dimen/sp13" />
    </LinearLayout>
</layout>


