<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.AddPhoneNumberFragment">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.example.lysnclient.viewmodel.UserAuthenticateViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/add_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/authScreenBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <ImageView
            android:id="@+id/img_close_verify_screen"
            style="@style/actionIcon"
            android:layout_marginBottom="@dimen/dp24"
            android:contentDescription="@string/navigate_previous_screen"
            android:onClick="@{()->viewModel.navigateBack()}"
            android:src="@drawable/icon_back_button_arrow" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/textViewHeading"
            android:layout_marginBottom="@dimen/dp40"
            android:text="@string/what_is_your_phone_number" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/subHeading"
            android:lineSpacingExtra="@dimen/sp5"
            android:text="@string/we_ll_send_a_one_time_code_to_verify_your_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_add_phone_number"
            style="@style/roundCornerEditText"
            android:layout_marginTop="@dimen/dp16"
            android:hint="@string/phone"
            app:errorEnabled="true"
            app:errorMsg="@{viewModel.phoneNumberErrorMsg.trim()}"
            app:prefixText="@{viewModel.countryCodeField}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_add_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:text="@={viewModel.phoneNumberField}"
                android:textSize="@dimen/sp17" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify_phone_number"
            style="@style/submitButton"
            android:backgroundColor="@{TextUtils.isEmpty(viewModel.phoneNumberField)?@color/submitButtonDisableColor :@color/submitButtonEnableColor}"
            android:clickable="@{TextUtils.isEmpty(viewModel.phoneNumberField)? false :true}"
            android:enabled="@{TextUtils.isEmpty(viewModel.phoneNumberField)? false :true}"
            android:onClick="@{()->viewModel.onBtnAddMobileClickListener()}"
            android:text="@string/continues"
            android:textColor="@{TextUtils.isEmpty(viewModel.phoneNumberField)?@color/submitButtonDisableTextColor :@color/submitButtonEnableTextColor}"
            app:layoutMarginTop="@{TextUtils.isEmpty(viewModel.phoneNumberErrorMsg)? @dimen/dp0 : @dimen/dp16}" />
    </LinearLayout>
</layout>

