<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.LoginFragment">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.example.lysnclient.viewmodel.UserAuthenticateViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/authScreenBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <ImageView
            android:id="@+id/img_back_navigation"
            style="@style/actionIcon"
            android:layout_marginBottom="@dimen/dp24"
            android:contentDescription="@string/navigate_previous_screen"
            android:onClick="@{()->viewModel.navigateBack()}"
            android:src="@drawable/icon_back_button_arrow" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/textViewHeading"
            android:layout_marginBottom="@dimen/dp8"
            android:text="@string/log_in_with_your_password" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/subHeading"
            android:lineSpacingExtra="@dimen/sp5"
            android:text="@{@string/using_email_to_login(viewModel.emailField)}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            style="@style/roundCornerEditText"
            android:layout_marginTop="@dimen/dp16"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/activeBlueColor"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.loginPasswordField}"
                android:textSize="@dimen/sp17" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/submitButton"
            android:backgroundColor="@{TextUtils.isEmpty(viewModel.loginPasswordField)?@color/submitButtonDisableColor :@color/submitButtonEnableColor}"
            android:clickable="@{TextUtils.isEmpty(viewModel.loginPasswordField)? false :true}"
            android:enabled="@{TextUtils.isEmpty(viewModel.loginPasswordField)? false :true}"
            android:onClick="@{()->viewModel.onBtnLoginClickListener()}"
            android:text="@string/continues"
            android:textColor="@{TextUtils.isEmpty(viewModel.loginPasswordField)?@color/submitButtonDisableTextColor :@color/submitButtonEnableTextColor}" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_forgot_password"
            style="@style/subHeading"
            android:layout_marginTop="@dimen/dp16"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/sp5"
            android:onClick="@{()->viewModel.onBtnNavForgotPassClickListener()}"
            android:text="@string/forgot_your_password" />

    </LinearLayout>

</layout>

