<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.OtpVerificationFragment">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.example.lysnclient.viewmodel.UserAuthenticateViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/otp_verify_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/authScreenBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="@dimen/dp16">

        <ImageView
            android:id="@+id/img_close_verify_screen"
            style="@style/actionIcon"
            android:layout_marginBottom="@dimen/dp24"
            android:contentDescription="@string/navigate_previous_screen"
            android:onClick="@{()->viewModel.navigateBack()}"
            android:src="@drawable/icon_back_button_arrow" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/textViewHeading"
            android:layout_marginBottom="@dimen/dp8"
            android:text="@string/enter_the_code" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/subHeading"
            android:lineSpacingExtra="@dimen/sp5"
            android:text="@{@string/we_sent_a_6_digit_code_to_61_00000000(viewModel.countryCodeField,viewModel.phoneNumberField)}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_add_otp"
            style="@style/roundCornerEditText"
            android:layout_marginTop="@dimen/dp16"
            android:hint="@string/otp"
            android:paddingBottom="@{TextUtils.isEmpty(viewModel.otpCodeFieldErrorMsg)? @dimen/dp0 : @dimen/dp8}"
            app:errorEnabled="true"
            app:errorMsg="@{viewModel.otpCodeFieldErrorMsg.trim()}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_add_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:text="@={viewModel.otpCodeField}"
                android:textSize="@dimen/sp17" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_resend_otp"
            style="@style/subHeading"
            android:layout_marginBottom="@dimen/dp16"
            android:lineSpacingExtra="5sp"
            android:onClick="@{()->viewModel.onBtnResentOtpClickListener()}"
            android:text="@string/resend_code"
            android:textColor="@color/blueTextColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify_otp"
            style="@style/submitButton"
            android:backgroundColor="@{TextUtils.isEmpty(viewModel.otpCodeField)?@color/submitButtonDisableColor :@color/submitButtonEnableColor}"
            android:clickable="@{TextUtils.isEmpty(viewModel.otpCodeField)? false :true}"
            android:enabled="@{TextUtils.isEmpty(viewModel.otpCodeField)? false :true}"
            android:onClick="@{()->viewModel.onBtnOtpVerifyClickListener()}"
            android:text="@string/continues"
            android:textColor="@{TextUtils.isEmpty(viewModel.otpCodeField)?@color/submitButtonDisableTextColor :@color/submitButtonEnableTextColor}" />
    </LinearLayout>
</layout>

