<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="@dimen/dp16"
    android:paddingBottom="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp8"
        android:fontFamily="@font/ibmplex_sans_fonts_medium"
        android:lineSpacingExtra="@dimen/sp9"
        android:maxLines="1"
        android:text="@string/exit_assessment_title"
        android:textColor="@color/darkFontColor"
        android:textSize="@dimen/sp17"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp8"
        android:layout_marginBottom="@dimen/dp16"
        android:lineSpacingExtra="@dimen/sp5"
        android:text="@string/exit_assessment_message"
        android:textColor="@color/greyFontColor"
        android:textSize="@dimen/sp15" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp40"
            android:layout_toStartOf="@+id/btn_exit"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:text="@string/cancel_title"
            android:textAllCaps="false"
            android:textColor="@color/darkFontColor"
            android:textSize="@dimen/sp16" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp30"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:gravity="center"
            android:lineSpacingExtra="4sp"
            android:text="@string/exit_title"
            android:textAllCaps="false"
            android:textColor="@color/darkFontColor"
            android:textSize="@dimen/sp16" />
    </RelativeLayout>

</LinearLayout>